@@ -2,6 +2,8 @@
 
 	* tramp-sh.el (tramp-ssh-controlmaster-options): Don't use an
 	absolute ControlPath on macOS.  (Bug#64880)
+	(tramp-sh-handle-expand-file-name): `null-device' could be nil.
+	Reported by Richard Copley <rcopley@gmail.com>.
 
 2023-07-22  Michael Albinus  <michael.albinus@gmx.de>
 
